# openapi/openapi.json
@@ -164,6 +164,163 @@
           "Docs Routes"
         ]
       }
+    },
+    "/docs/open-api/auth": {
+      "get": {
+        "summary": "Auto-generated GET /open-api/auth",
+        "responses": {
+          "default": {
+            "description": "Default fallback response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "openapi": {
+                      "type": "string"
+                    },
+                    "info": {
+                      "type": "object",
+                      "properties": {
+                        "title": {
+                          "type": "string"
+                        },
+                        "description": {
+                          "type": "string"
+                        },
+                        "version": {
+                          "type": "string"
+                        }
+                      },
+                      "required": [
+                        "title",
+                        "description",
+                        "version"
+                      ]
+                    },
+                    "components": {
+                      "type": "object",
+                      "properties": {
+                        "securitySchemes": {
+                          "type": "object",
+                          "properties": {
+                            "apiKeyCookie": {
+                              "type": "object",
+                              "properties": {
+                                "type": {
+                                  "type": "string"
+                                },
+                                "in": {
+                                  "type": "string"
+                                },
+                                "name": {
+                                  "type": "string"
+                                },
+                                "description": {
+                                  "type": "string"
+                                }
+                              },
+                              "required": [
+                                "type",
+                                "in",
+                                "name",
+                                "description"
+                              ]
+                            },
+                            "bearerAuth": {
+                              "type": "object",
+                              "properties": {
+                                "type": {
+                                  "type": "string"
+                                },
+                                "scheme": {
+                                  "type": "string"
+                                },
+                                "description": {
+                                  "type": "string"
+                                }
+                              },
+                              "required": [
+                                "type",
+                                "scheme",
+                                "description"
+                              ]
+                            }
+                          },
+                          "required": [
+                            "apiKeyCookie",
+                            "bearerAuth"
+                          ]
+                        },
+                        "schemas": {
+                          "type": "object",
+                          "properties": {}
+                        }
+                      },
+                      "required": [
+                        "securitySchemes",
+                        "schemas"
+                      ]
+                    },
+                    "security": {
+                      "type": "array",
+                      "items": {}
+                    },
+                    "servers": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "url": {
+                            "type": "string"
+                          }
+                        },
+                        "required": [
+                          "url"
+                        ]
+                      }
+                    },
+                    "tags": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "name": {
+                            "type": "string"
+                          },
+                          "description": {
+                            "type": "string"
+                          }
+                        },
+                        "required": [
+                          "name",
+                          "description"
+                        ]
+                      }
+                    },
+                    "paths": {
+                      "type": "object",
+                      "properties": {}
+                    }
+                  },
+                  "required": [
+                    "openapi",
+                    "info",
+                    "components",
+                    "security",
+                    "servers",
+                    "tags",
+                    "paths"
+                  ]
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "Docs Routes"
+        ]
+      }
     }
   }
 }
